修改图片资源文件，增加翻译

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 
 <head>
-  <title>utterances</title>
+  <title>Beaudar</title>
   <meta name="description" content="A lightweight commenting system using GitHub issues.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -53,7 +53,7 @@
   <main class="timeline">
     <article class="timeline-comment">
       <a class="avatar" href="https://github.com/utterance" tabindex="-1">
-        <img alt="@utterances" height="44" width="44" src="https://avatars3.githubusercontent.com/u/27908738?v=3&s=88">
+        <img alt="@utterances" height="44" width="44" src="./icons/Beaudar-240.png">
       </a>
       <div class="comment">
         <header class="comment-header">
@@ -74,6 +74,7 @@
   <script src="./index.ts"></script>
 
   <if condition="NODE_ENV === 'production'">
+    <!-- TODO-->
     <script src="https://utteranc.es/client.js" repo="utterance/utterances" issue-term="homepage"
       crossorigin="anonymous" theme="github-light" async>
     </script>
