--- a/src/beaudar.html
+++ b/src/beaudar.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>beaudar</title>
-  <meta name="description" content="使用 GitHub issue 的轻量级评论系统。">
+  <meta name="description" content="使用 GitHub issue 的轻量级评论插件。">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://api.github.com">
