修改 api 地址，整理资源

--- a/src/beaudar.html
+++ b/src/beaudar.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 
 <head>
-  <title>beaudar</title>
+  <title>Beaudar</title>
   <meta name="description" content="使用 GitHub issue 的轻量级评论插件。">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
