--- a/src/index.html
+++ b/src/index.html
@@ -59,13 +59,13 @@
       <div class="comment">
         <header class="comment-header">
           <span class="comment-meta">
-            <a class="text-link" href="https://github.com/utterance">
-              <strong>Beauder</strong>
+            <a class="text-link" href="https://github.com/beaudar">
+              <strong>关于 Beaudar</strong>
             </a>
           </span>
         </header>
         <article class="markdown-body" md>
-          <include src="./README.md"></include>
+          <include src="./README.MD"></include>
           <h2 id="configuration"> </h2>
         </article>
       </div>
@@ -80,7 +80,7 @@
     </script>
   </if>
   <else>
-    <script src="http://localhost:4000/client.js" repo="beaudar/beaudar-demo" issue-term="pathname" label="💬 comment"
+    <script src="http://localhost:4000/client.js" repo="beaudar/beaudar" issue-term="pathname" label="💬 comment"
       crossorigin="anonymous" theme="github-light" async>
     </script>
   </else>
