修复正则表达式错误

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   <link rel="mask-icon" href="./icons/safari-pinned-tab.svg" color="#4c2889">
   <link rel="shortcut icon" href="./icons/favicon.ico">
   <if condition="NODE_ENV === 'production'">
-    <link rel="canonical" href="https://beaudar.lipk.org">
+    <link rel="canonical" href="http://beaudar.lipk.org">
   </if>
   <else>
     <link rel="canonical" href="http://localhost:4000/index.html">
@@ -80,7 +80,7 @@
     </script>
   </if>
   <else>
-    <script src="http://localhost:4000/client.js" repo="beaudar/beaudar" issue-term="pathname" label="💬 comment"
+    <script src="http://localhost:4000/client.js" repo="zsdycs/beaudar-demo" issue-term="pathname" label="💬 comment"
       crossorigin="anonymous" theme="github-light" async>
     </script>
   </else>
