--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 
 <head>
-  <title>Beaudar</title>
+  <title>Beaudar（表达）</title>
   <meta name="description" content="A lightweight commenting system using GitHub issues.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -65,6 +65,9 @@
         <article class="markdown-body" md>
           <include src="./README.MD"></include>
           <h2 id="configuration"> </h2>
+          <div class="clear-both" md>
+            <include src="./SITES.MD"></include>
+          </div>
         </article>
       </div>
     </article>
