index 增加谷歌分析，beaudar 增加官网地址

--- a/src/beaudar.html
+++ b/src/beaudar.html
@@ -2,8 +2,8 @@
 <html lang="zh-cn">
 
 <head>
-  <title>Beaudar</title>
-  <meta name="description" content="使用 GitHub issue 的轻量级评论插件。">
+  <title>Beaudar（表达）</title>
+  <meta name="description" content="使用 GitHub issue 的轻量级评论插件。官网地址: https://beaudar.lipk.org.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://api.github.com">
