--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Beaudar（表达）</title>
-  <meta name="description" content="A lightweight commenting system using GitHub issues.">
+  <meta name="description" content="使用 GitHub issue 的轻量级评论插件。">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://api.github.com">
@@ -86,5 +86,17 @@
     </script>
   </else>
 </body>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154705931-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+  gtag('config', 'UA-154705931-1');
+
+</script>
 
 </html>
