--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
 </head>
 
 <body>
+  <canvas id="confetti"> </canvas>
   <main class="timeline">
     <article class="timeline-comment">
       <a class="avatar" href="https://github.com/beaudar" tabindex="-1">
@@ -74,17 +75,20 @@
   </main>
 
   <script src="./index.ts"></script>
+  <script src="./confetti.js"></script>
 
-  <if condition="NODE_ENV === 'production'">
-    <script src="https://beaudar.lipk.org/client.js" repo="beaudar/beaudar" issue-term="homepage"
-      crossorigin="anonymous" theme="github-light" async>
-    </script>
-  </if>
-  <else>
-    <script src="http://localhost:4000/client.js" repo="zsdycs/beaudar-demo" issue-term="pathname" label="💬 comment"
-      crossorigin="anonymous" theme="github-light" async>
-    </script>
-  </else>
+  <section id="beaudar">
+    <if condition="NODE_ENV === 'production'">
+      <script src="https://beaudar.lipk.org/client.js" repo="beaudar/beaudar" issue-term="homepage"
+        crossorigin="anonymous" theme="github-light" async>
+      </script>
+    </if>
+    <else>
+      <script src="http://localhost:4000/client.js" repo="zsdycs/beaudar-demo" issue-term="pathname" label="💬 comment"
+        crossorigin="anonymous" theme="github-light" async>
+      </script>
+    </else>
+  </section>
 </body>
 <!-- Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154705931-1"></script>
