头像 a 标签 target="_blank"

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
   <canvas id="confetti"> </canvas>
   <main class="timeline">
     <article class="timeline-comment">
-      <a class="avatar" href="https://github.com/beaudar" tabindex="-1">
+      <a class="avatar" href="https://github.com/beaudar" target="_blank" tabindex="-1">
         <img alt="@beaudar" height="44" width="44" src="./icons/Beaudar-240.png">
       </a>
       <div class="comment">
