--- a/src/index.html
+++ b/src/index.html
@@ -55,13 +55,13 @@
   <canvas id="confetti"> </canvas>
   <main class="timeline">
     <article class="timeline-comment">
-      <a class="avatar" href="https://github.com/beaudar" target="_blank" tabindex="-1">
+      <a class="avatar" href="https://github.com/beaudar" target="_blank">
         <img alt="@beaudar" height="44" width="44" src="./icons/Beaudar-240.png">
       </a>
       <div class="comment">
         <header class="comment-header">
           <span class="comment-meta">
-            <strong>关于 Beaudar</strong>
+            <strong class="comment-author">Beaudar</strong>
           </span>
         </header>
         <article class="markdown-body" md>
