百度收录 meta 更新

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="使用 GitHub issue 的轻量级评论插件。">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="baidu-site-verification" content="SQ5Gg5sRhQ" />
+  <meta name="baidu-site-verification" content="VJTgEhbeUg" />
   <link rel="preconnect" href="https://api.github.com">
   <link rel="preconnect" href="https://avatars3.githubusercontent.com">
   <if condition="NODE_ENV === 'production'">
