--- a/src/index.html
+++ b/src/index.html
@@ -103,6 +103,14 @@
       </script>
     </else>
   </section>
+  <div style="width:300px;margin:0 auto; padding:20px 0;">
+    <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=44200002444250"
+      style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="./icons/beian.png"
+        style="float:left;" />
+      <p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">粤公网安备 44200002444250号
+      </p>
+    </a>
+  </div>
 </body>
 
 </html>
