【修改】备案信息 CSS

--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
       </script>
     </else>
   </section>
-  <div style="width:300px;margin:0 auto; padding:20px 0;">
+  <div style="width:300px;margin:0 auto; padding:20px 0; text-align: center;">
     <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=44200002444250"
       style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="./icons/beian.png"
         style="float:left;" />
