添加 copyright，修改 CSS

--- a/src/index.html
+++ b/src/index.html
@@ -103,12 +103,12 @@
       </script>
     </else>
   </section>
-  <div style="width:300px;margin:0 auto; padding:20px 0; text-align: center;">
-    <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=44200002444250"
-      style="display:inline-block;text-decoration:none;height:20px;line-height:20px;"><img src="./icons/beian.png"
-        style="float:left;" />
-      <p style="float:left;height:20px;line-height:20px;margin: 0px 0px 0px 5px; color:#939393;">粤公网安备 44200002444250号
-      </p>
+  <div class="copyright">
+    © 2018 - 2020 <a target="_blank" href="https://lipk.org">执手对影成双</a>
+    <a target="_blank" rel="noopener noreferrer"
+      href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=44200002444250">
+      <img src="./icons/beian.png" />
+      <p>粤公网安备 44200002444250号</p>
     </a>
   </div>
 </body>
