--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 
 <head>
-  <title>Beaudar（表达）</title>
+  <title>Beaudar - 表达</title>
   <meta name="description" content="使用 GitHub issue 的轻量级评论插件。">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
