【修改】网站介绍内容

--- a/src/index.html
+++ b/src/index.html
@@ -79,10 +79,11 @@
         </header>
         <article class="markdown-body" md>
           <include src="./README.MD"></include>
-          <h2 id="configuration"> </h2>
+          <h2 id="configuration">🥳 配置并获取代码 🥂🎉</h2>
           <div class="clear-both" md>
             <include src="./SITES.MD"></include>
           </div>
+          <h2>赶紧来试试吧！👇👇👇</h2>
         </article>
       </div>
     </article>
