--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
       </script>
     </if>
     <else>
-      <script src="http://localhost:4000/client.js" repo="zsdycs/beaudar-demo" issue-term="pathname" label="💬 comment"
+      <script src="http://localhost:4000/client.js" repo="zsdycs/beaudar-demo" issue-term="pathname" label="💬 评论"
         crossorigin="anonymous" theme="github-light" async>
       </script>
     </else>
