【修改】添加 <meta charset="utf-8">

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Beaudar - 表达</title>
   <meta name="description" content="使用 GitHub issue 的轻量级评论插件。">
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="baidu-site-verification" content="VJTgEhbeUg" />
