--- a/src/beaudar.html
+++ b/src/beaudar.html
@@ -5,6 +5,7 @@
   <title>Beaudar（表达）</title>
   <meta name="description" content="使用 GitHub issue 的轻量级评论插件。官网地址: https://beaudar.lipk.org.">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://api.github.com">
   <link rel="preconnect" href="https://avatars3.githubusercontent.com">
