Modify file read suffix

--- a/src/index.html
+++ b/src/index.html
@@ -79,10 +79,10 @@
           </span>
         </header>
         <article class="markdown-body" md>
-          <include src="./README.MD"></include>
+          <include src="./README.md"></include>
           <h2 id="configuration">🥳 配置并获取代码 🥂🎉</h2>
           <div class="clear-both" md>
-            <include src="./SITES.MD"></include>
+            <include src="./SITES.md"></include>
           </div>
           <h2>赶紧来试试吧！👇👇👇</h2>
         </article>
