--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     }
 
   </script>
-  <link rel="mask-icon" href="./icons/safari-pinned-tab.svg" color="#4c2889">
+  <link rel="mask-icon" href="./icons/safari-pinned-tab.svg">
   <link rel="shortcut icon" href="./icons/favicon.ico">
   <if condition="NODE_ENV === 'production'">
     <link rel="canonical" href="http://beaudar.lipk.org">
