--- a/src/index.html
+++ b/src/index.html
@@ -114,11 +114,11 @@
     </else>
   </section>
   <div class="copyright">
-    © 2018 - 2021 <a target="_blank" href="https://lipk.org">执手对影成双</a>
+    ©2021 <a target="_blank" href="https://github.com/zsdycs">zsdycs</a>
     <a target="_blank" rel="noopener noreferrer"
       href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=44200002444250">
       <img src="./icons/beian.png" />
-      <p>粤公网安备 44200002444250号</p>
+      <p>粤公网安备 44200002444250 号</p>
     </a>
   </div>
 </body>
