--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
     </else>
   </section>
   <div class="copyright">
-    ©2021 <a target="_blank" href="https://github.com/zsdycs">zsdycs</a>
+    ©2021 <a target="_blank" href="https://github.com/zsdycs">ZSDYCS</a>
     <a target="_blank" rel="noopener noreferrer"
       href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=44200002444250">
       <img src="./icons/beian.png" />
