添加 commentOrder，inputPosition 开放 keepTheme，loading

--- a/src/index.html
+++ b/src/index.html
@@ -132,8 +132,12 @@
           src="https://beaudar.lipk.org/client.js"
           repo="beaudar/beaudar"
           issue-term="homepage"
-          crossorigin="anonymous"
           theme="github-light"
+          keep-theme="true"
+          loading="true"
+          comment-order="desc"
+          input-position="top"
+          crossorigin="anonymous"
           async
         ></script>
       </if>
@@ -143,8 +147,12 @@
           repo="zsdycs/beaudar-demo"
           issue-term="pathname"
           label="💬 评论"
-          crossorigin="anonymous"
           theme="github-light"
+          keep-theme="true"
+          loading="true"
+          comment-order="desc"
+          input-position="top"
+          crossorigin="anonymous"
           async
         ></script>
       </else>
