优化窄宽度下的显示，更新头像显示样式
closed #34

--- a/src/index.html
+++ b/src/index.html
@@ -100,14 +100,26 @@
         <a class="avatar" href="https://github.com/beaudar" target="_blank">
           <img
             alt="@beaudar"
-            height="44"
-            width="44"
-            src="./icons/Beaudar-240.png"
+            height="40"
+            width="40"
+            src="./icons/Beaudar-340.png"
           />
         </a>
         <div class="comment">
           <header class="comment-header">
             <span class="comment-meta">
+              <a
+                class="smallAvatar"
+                href="https://github.com/beaudar"
+                target="_blank"
+              >
+                <img
+                  alt="@beaudar"
+                  height="20"
+                  width="20"
+                  src="./icons/Beaudar-340.png"
+                />
+              </a>
               <strong class="comment-author">Beaudar</strong>
             </span>
           </header>
