调试 comment-order="asc" input-position="bottom"

--- a/src/index.html
+++ b/src/index.html
@@ -152,8 +152,8 @@
           theme="github-light"
           keep-theme="true"
           loading="true"
-          comment-order="desc"
-          input-position="top"
+          comment-order="asc"
+          input-position="bottom"
           crossorigin="anonymous"
           async
         ></script>
