fix: 解决 emoji 失去颜色的问题

--- a/src/index.html
+++ b/src/index.html
@@ -98,11 +98,16 @@
           </header>
           <article class="markdown-body" md>
             <include src="./README.md"></include>
-            <h2 id="configuration">🥳 配置并获取代码 🥂🎉</h2>
+            <h2 id="configuration">
+              <span class="g-emoji">🥳</span> 配置并获取代码
+              <span class="g-emoji">🥂🎉</span>
+            </h2>
             <div class="clear-both" md>
               <include src="./SITES.md"></include>
             </div>
-            <h2>赶紧来试试吧！👇👇👇</h2>
+            <h2 style="border-bottom: none">
+              赶紧来试试吧！<span class="g-emoji">👇👇👇</span>
+            </h2>
           </article>
         </div>
       </article>
