feat: 合并 css 文件

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta name="baidu-site-verification" content="VJTgEhbeUg" />
     <link rel="preconnect" href="https://api.github.com" />
     <link rel="preconnect" href="https://avatars3.githubusercontent.com" />
-    <link rel="stylesheet" href="./stylesheets/main-index.css" />
+    <link rel="stylesheet" href="./stylesheets/index.css" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
