--- a/src/beaudar.html
+++ b/src/beaudar.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://api.github.com" />
     <link rel="preconnect" href="https://avatars3.githubusercontent.com" />
-    <link rel="stylesheet" href="./stylesheets/beaudar.css" />
+    <link rel="stylesheet" href="./stylesheets/index.css" />
     <script>
       if (!window.Promise || !window.fetch) {
         if (Array.from === undefined) {
