fix: body background-color

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
     </script>
   </head>
 
-  <body>
+  <body class="index">
     <main class="timeline">
       <article class="timeline-comment">
         <a class="avatar" href="https://github.com/beaudar" target="_blank">
