feat: 增加 issue-label 配置

--- a/src/index.html
+++ b/src/index.html
@@ -104,6 +104,7 @@
           src="http://localhost:3000/client.ts"
           repo="zsdycs/beaudar-demo"
           issue-term="pathname"
+          issue-label="homepage"
           label="💬 评论"
           theme="github-light"
           keep-theme="true"
