change: 修改本地调试 script 配置

--- a/src/index.html
+++ b/src/index.html
@@ -103,8 +103,8 @@
           type="module"
           src="http://localhost:3000/client.ts"
           repo="zsdycs/beaudar-demo"
-          issue-term="pathname"
-          issue-label="homepage"
+          issue-term="title"
+          issue-label="pathname"
           label="💬 评论"
           theme="github-light"
           keep-theme="true"
