feat: 增加 issue-label 配置、优化配置页面布局

--- a/src/index.html
+++ b/src/index.html
@@ -68,8 +68,7 @@
           <article class="markdown-body" md>
             <include src="./README.md"></include>
             <h2 id="configuration">
-              <span class="g-emoji">🥳</span> 配置并获取代码
-              <span class="g-emoji">🥂🎉</span>
+              <span class="g-emoji">✍</span>配置并获取代码
             </h2>
             <div class="clear-both" md>
               <include src="./SITES.md"></include>
