change: 删除无用的 CSS

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://api.github.com" />
     <link rel="preconnect" href="https://avatars3.githubusercontent.com" />
     <link rel="stylesheet" href="./stylesheets/index.css" />
+    <link rel="stylesheet" href="./stylesheets/index-html.css" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
